output: consider dropping the frame event
It's only used by the Wayland backend. All other backends all fire it at presentation time.
- Making it so compositors draw at presentation time with the Wayland backend isn't so bad.
- If compositors really want to leverage
wl_surface.frame
, they can do so manually (withwlr_wl_output_get_surface()
).
TODO: figure out how to replace wlr_output_schedule_frame()
.