backend/drm/drm.c
@@ -766,12 +766,6 @@ bool drm_connector_commit_state(struct wlr_drm_connector *conn,
 	}
 	if (flags & DRM_MODE_PAGE_FLIP_EVENT) {
 		conn->pending_page_flip_crtc = conn->crtc->id;
-
-		// wlr_output's API guarantees that submitting a buffer will schedule a
-		// frame event. However the DRM backend will also schedule a frame event
-		// when performing a modeset. Set frame_pending to true so that
-		// wlr_output_schedule_frame doesn't trigger a synthetic frame event.
-		conn->output.frame_pending = true;
 	}
 
 out:
